--- a/DatingApp-SPA/src/app/nav/nav.component.html
+++ b/DatingApp-SPA/src/app/nav/nav.component.html
@@ -7,13 +7,33 @@
     <li class="nav-item"><a class="nav-link" href="#">Messages</a></li>
   </ul>
 
-  <form class="form-inline my-2 my-lg-0">
-    <input class="form-control mr-sm-2" type="text" placeholder="Username" />
+  <form
+    #loginForm="ngForm"
+    class="form-inline my-2 my-lg-0"
+    (ngSubmit)="login()"
+  >
+    <input
+      class="form-control mr-sm-2"
+      type="text"
+      name="username"
+      placeholder="Username"
+      required
+      [(ngModel)]="model.username"
+    />
     <input
       class="form-control mr-sm-2"
       type="password"
+      name="password"
       placeholder="Password"
+      required
+      [(ngModel)]="model.password"
     />
-    <button class="btn btn-success my-2 my-sm-0" type="submit">Login</button>
+    <button
+      [disabled]="!loginForm.valid"
+      class="btn btn-success my-2 my-sm-0"
+      type="submit"
+    >
+      Login
+    </button>
   </form>
 </nav>
