--- a/DatingApp-SPA/src/app/nav/nav.component.html
+++ b/DatingApp-SPA/src/app/nav/nav.component.html
@@ -5,9 +5,26 @@
     <li class="nav-item active"><a class="nav-link" href="#">Maches</a></li>
     <li class="nav-item"><a class="nav-link" href="#">Lists</a></li>
     <li class="nav-item"><a class="nav-link" href="#">Messages</a></li>
+    <li class="nav-item">
+      <a class="nav-link" (click)="loggedOut()">Logout</a>
+    </li>
   </ul>
 
+  <div *ngIf="loggedIn()" class="dropdown">
+    <a class="dropdown-toggle text-light">Welcome User</a>
+
+    <div class="dropdown-menu">
+      <a class="dropdown-item" href="#">
+        <i class="fa fa-user"></i> Edit Profile
+      </a>
+      <a class="dropdown-item" href="#">
+        <i class="fa fa-sign-out"></i> Logout
+      </a>
+    </div>
+  </div>
+
   <form
+    *ngIf="!loggedIn()"
     #loginForm="ngForm"
     class="form-inline my-2 my-lg-0"
     (ngSubmit)="login()"
