--- a/DatingApp-SPA/src/app/home/home.component.html
+++ b/DatingApp-SPA/src/app/home/home.component.html
@@ -12,7 +12,13 @@
 
   <div *ngIf="registerMode" class="container">
     <div class="row justify-content-center">
-      <div class="col-4"><app-register></app-register></div>
+      <div class="col-4">
+        <app-register
+          (cancelRegister)="cancelRegisterMode($event)"
+        ></app-register>
+      </div>
     </div>
   </div>
 </div>
+
+<!-- <p *ngFor="let value of values">{{ value.name }}</p> -->
