--- a/DatingApp-SPA/src/styles.css
+++ b/DatingApp-SPA/src/styles.css
@@ -4,3 +4,5 @@
 
 @import '../node_modules/alertifyjs/build/css/alertify.min.css';
 @import '../node_modules/alertifyjs/build/css/themes/bootstrap.min.css';
+
+@import '../node_modules/bootswatch/dist/united/bootstrap.min.css';
