--- a/DatingApp-SPA/src/app/members/member-detail/member-detail.component.html
+++ b/DatingApp-SPA/src/app/members/member-detail/member-detail.component.html
@@ -1,4 +1,7 @@
 <div class="container mt-4">
+  <div>
+    <h1>{{ user.knownAs }}'s Progile</h1>
+  </div>
   <div class="row">
     <div class="col-sm-4">
       <div class="card">
@@ -46,7 +49,12 @@
             <h4>Interests</h4>
             <p>{{ user.interests }}</p>
           </tab>
-          <tab heading="Photos"> <p>Photos</p> </tab>
+          <tab heading="Photos">
+            <ngx-gallery
+              [options]="galleryOptions"
+              [images]="galleryImages"
+            ></ngx-gallery>
+          </tab>
           <tab heading="Messages"> <p>Messages</p> </tab>
         </tabset>
       </div>
